[gd_scene load_steps=4 format=2]

[ext_resource path="res://SCRIPTS/NEUROGRAMMA.gd" type="Script" id=1]
[ext_resource path="res://ROW_SAMPLE.tscn" type="PackedScene" id=2]
[ext_resource path="res://SCRIPTS/TIMELINE.gd" type="Script" id=3]

[node name="NEUROGRAMMA" type="Panel"]
margin_left = -0.198303
margin_top = 1.00088
margin_right = 1128.8
margin_bottom = 114.001
script = ExtResource( 1 )

[node name="NEUROGRAM_TOOLS_background" type="ColorRect" parent="."]
margin_right = 100.0
margin_bottom = 113.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="Button" type="Button" parent="NEUROGRAM_TOOLS_background"]
margin_left = 1.0
margin_right = 49.0
margin_bottom = 20.0
text = "Start"

[node name="Button2" type="Button" parent="NEUROGRAM_TOOLS_background"]
margin_left = 1.0
margin_top = 21.0
margin_right = 49.0
margin_bottom = 41.0
text = "Stop"

[node name="Button3" type="Button" parent="NEUROGRAM_TOOLS_background"]
margin_left = 1.0
margin_top = 42.0
margin_right = 49.0
margin_bottom = 62.0
disabled = true
text = "Rec"

[node name="Button4" type="Button" parent="NEUROGRAM_TOOLS_background"]
margin_left = 1.0
margin_top = 63.0
margin_right = 49.0
margin_bottom = 83.0
disabled = true
text = "Mode"

[node name="SpinBox" type="SpinBox" parent="NEUROGRAM_TOOLS_background"]
margin_left = -26.0
margin_top = 87.0
margin_right = 48.0
margin_bottom = 111.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 1.0
align = 2

[node name="Control" type="Control" parent="."]
margin_left = 50.0
margin_right = 1131.0
margin_bottom = 113.0

[node name="NEURON_NAMES_LIST_background" type="ColorRect" parent="Control"]
margin_right = 100.0
margin_bottom = 113.0
color = Color( 0.105882, 0.0784314, 0.0784314, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
margin_bottom = 1.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
size_flags_horizontal = 2

[node name="ROW" parent="Control/ScrollContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_right = 800.0
margin_bottom = 12.0

[node name="ROW2" parent="Control/ScrollContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_right = 800.0
margin_bottom = 12.0

[node name="TIMELINE_background" type="ColorRect" parent="."]
margin_top = 113.0
margin_right = 1129.0
margin_bottom = 124.0
color = Color( 0, 0, 0, 1 )

[node name="TIMELINE" type="ColorRect" parent="."]
margin_left = 150.0
margin_top = 113.0
margin_right = 1111.0
margin_bottom = 124.0
color = Color( 0.251871, 0.250671, 0.289062, 1 )
script = ExtResource( 3 )

[node name="Label_start" type="Label" parent="TIMELINE"]
margin_left = 3.36235
margin_top = 0.787445
margin_right = 23.3624
margin_bottom = 14.7874
rect_scale = Vector2( 0.8, 0.8 )
text = "0.0"

[node name="Label_end" type="Label" parent="TIMELINE"]
margin_left = 903.0
margin_top = 1.0
margin_right = 974.0
margin_bottom = 15.0
rect_scale = Vector2( 0.8, 0.8 )
text = "0.0"
align = 2

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -4.0
margin_right = 1129.0
color = Color( 0, 0, 0, 1 )

[node name="RED_CURSOUR" type="ColorRect" parent="."]
margin_left = 150.0
margin_right = 152.0
margin_bottom = 124.0
color = Color( 1, 0, 0, 1 )

[node name="Panel" type="Panel" parent="RED_CURSOUR"]
margin_left = -15.0045
margin_top = -16.4319
margin_right = 15.9955
margin_bottom = -4.43188

[node name="CURSOUR_LABEL" type="Label" parent="RED_CURSOUR"]
margin_left = -18.7497
margin_top = -16.0846
margin_right = 21.2503
margin_bottom = -2.08456
text = "T"
align = 1

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1111.0
margin_right = 1129.0
margin_bottom = 124.0
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="NEUROGRAM_TOOLS_background/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NEUROGRAM_TOOLS_background/Button2" to="." method="_on_Button2_pressed"]
[connection signal="value_changed" from="NEUROGRAM_TOOLS_background/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
